fix(): added contrast when hovering on a menu list item

--- a/client/src/utils/styles/index.css
+++ b/client/src/utils/styles/index.css
@@ -5,7 +5,7 @@
   cursor: pointer;
   transition: filter 0.3s;
   filter: sepia(20%);
-  /* transform: scale(1.03); */
+  transform: scale(1.03);
   /* box-shadow: 0 0 11px rgba(24, 74, 107, 0.2); */
 }
 .background-sheet {
